# vmOperations

./: .gitignore  README.md  __main__.py  hostname.py  index.yml  password.py  plusclouds.py  plusclouds_service.py  pyproject.toml  requirement.txt  requirements.txt  storage.py  test.py
module_search/: ansible_operations.py  callback_agent.py  playbook-test.yml  service_search.py
plusclouds-service/: service.py
plusclouds-service/module_search/: ansible_operations.py  callback_agent.py  service_search.py
plusclouds.automation.python.script.hostname/Debian10/: hostname.py
plusclouds.automation.python.script.hostname/Ubuntu19.04/: hostname.py
plusclouds.automation.python.script.password/Debian10/: password.py
plusclouds.automation.python.script.password/Debian17.5/: password.py
plusclouds.automation.python.script.storage/Centos7/: storage.py
plusclouds.automation.python.script.storage/Centos8/: storage.py
plusclouds.automation.python.script.storage/Debian10/: storage.py
plusclouds.automation.python.script.storage/Debian11/: storage.py
plusclouds.automation.python.script.storage/Debian17.5/: storage.py
plusclouds.automation.python.script.storage/Fedora30/: storage.py
plusclouds.automation.python.script.storage/Pardus19.0/: storage.py
plusclouds.automation.python.script.storage/Ubuntu16.04/: storage.py
plusclouds.automation.python.script.storage/Ubuntu18.04/: storage.py
plusclouds.automation.python.script.storage/Ubuntu19.04/: storage.py
ssh_keys/: ssh_key_parser.py
vm-operations/: __main__.py
vmoperations/: plusclouds.py
(+4 files in other folders)
