[build-system]
requires = ["hatchling",
	"setuptools>=42.0.0",
    	"wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "vm-operations"
version = "0.0.1"
authors = [
  { name="Talha Unsel", email="talha.unsel@plusclouds.com" },
  { name="Yigithan Saglam", email="saglamyigithan@gmail.com" },
  { name="Zekican Budin", email="zekican.budin@plusclouds.com"},
]
description = "Virtual Machine Deployment Agent for PlusClouds ecosystem"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows :: Windows Server 2016",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/plusclouds/vmOperations"
"Bug Tracker" = "https://github.com/plusclouds/vmOperations/issues"
